[package]
name = "jexcel"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23.1"
rayon = "1.10.0"
thiserror = "2.0.12"

[dependencies.clap]
version = "4.5.40"
features = ["derive"]

[dependencies.image]
version = "0.25.6"
features = []

[build-dependencies]
bindgen = "0.71.1"
jpegxl-src = "0.11.2"
