[package]
name = "jexcel"
description = "An alternative libjxl frontend"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
keywords = ["jpeg-xl", "encoder", "libjxl"]
categories = ["multimedia::images"]
license = "MIT"

version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23.1"
eyre = "0.6.12"
globset = "0.4.16"
rayon = "1.10.0"
thiserror = "2.0.12"
walkdir = "2.5.0"

[dependencies.clap]
version = "4.5.40"
features = ["derive"]

[dependencies.image]
version = "0.25.6"
features = []

[dependencies.indicatif]
version = "0.18.0"
features = []

[build-dependencies]
bindgen = "0.71.1"
jpegxl-src = "0.11.2"

[profile.release]
lto = "thin"
